# programming_foundations

14/: CMakeLists.txt  main.c
14/libs/data_structures/: CMakeLists.txt
14/libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
15/: CMakeLists.txt  main.c
16/: CMakeLists.txt  funcs.c  funcs.h  main.c
17/: CMakeLists.txt  main.c
17/problems/: 2-3.c  4.c  5.c  6.c  problems.h
18/: CMakeLists.txt  main.c
19/: CMakeLists.txt  main.c  problems.c  problems.h
20/: CMakeLists.txt  main.c  problem10.c  problem9.c  problems.c  problems.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/vector/: vector.c  vector.h
semester2/14/: main.c
